<resources>
    <string name="app_name">Github User</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="follower">Follower</string>
    <string name="title">Github User</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="contact">Contact</string>
    <string name="user_detail">User Detail</string>
    <string name="change_language">Change Language</string>
</resources>
