<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
    card_view:cardCornerRadius="4dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@color/colorAccent" />
        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_username"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            tools:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username"/>
        <TextView
            android:id="@+id/tv_item_location"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_item_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"/>
</androidx.constraintlayout.widget.ConstraintLayout>